# openindiana-welcome

./: AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am
data/desktop/: Makefile.am  openindiana-about.desktop.in
data/html/: Makefile.am  index.html
data/html/C/: index.html
data/html/br/: index.html
data/html/de/: index.html
data/html/el/: index.html
data/html/en/: index.html
data/html/es/: index.html
data/html/fr/: index.html
data/html/nl/: index.html
data/html/pl/: index.html
data/html/ru/: index.html
data/html/sl/: index.html
data/html/stylesheets/: default.css
data/pixmaps/: Makefile.am
m4/: am_check_pygtk.m4
po/: LINGUAS  Makevars  POTFILES.in  de.po  id.po  it.po
src/: Makefile.am  openindiana-about.py
