### Process this file with automake to produce Makefile.in

htmldir = $(docdir)/html
nobase_dist_html_DATA = \
	stylesheets/default.css \
	images/oi-logo.png \
	index.html \
	C/index.html \
	br/index.html \
	de/index.html \
	el/index.html \
	en/index.html \
	es/index.html \
	fr/index.html \
	nl/index.html \
	pl/index.html \
	ru/index.html \
	sl/index.html
